Initial version of stub project and gatling code to test stub project. I need to clean up this project.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 *.log
 /test/gatling-maven-plugin-demo.iml
 /.idea/
-/test/target/
+*/target/
 *.DS_Store
+/stub-projects/stub-quarkus-rest-mongo/target/
+/stub-projects/gatling-test/target/
+/test/.idea/
