Updated the MONGODB_NAME ENV to existing db name, and change the secretRef to a new secret on the persist-gatling-reports-to-mongodb initContainer.

--- a/test/open-shift/pod-kogito-gatling-benchmark.yaml
+++ b/test/open-shift/pod-kogito-gatling-benchmark.yaml
@@ -38,12 +38,12 @@ spec:
         image: quay.io/almoglevi0/persist-gatling-reports-to-mongodb
         envFrom:
           - secretRef:
-              name: obc-kogito-gatling-claim
+              name: kogito-persist-gatling-results-to-mongo-crendentials
         env:
         - name: GATLING_FILE_PATH_ENV
           value: /src/kogito-gatling/target/gatling
         - name: MONGODB_NAME
-          value: kogito_gatling_results_db
+          value: kogito_dataindex
         - name: MONGODB_COLLECTION_NAME
           value: benchmark_results
         volumeMounts:
