--- a/test/process-quarkus-example/src/main/resources/application.properties
+++ b/test/process-quarkus-example/src/main/resources/application.properties
@@ -2,8 +2,10 @@
 # quarkus.package.type=fast-jar
 
 quarkus.swagger-ui.always-include=true
+kogito.persistence.type=mongodb
 
-quarkus.infinispan-client.server-list=localhost:11222
+quarkus.mongodb.database=kogito_quarkus
+
 quarkus.http.cors=true
 
 kafka.bootstrap.servers=localhost:9092
