--- a/test/kogito-gatling-load-testing/open-shift/pod-kogito-gatling-benchmark.yaml
+++ b/test/kogito-gatling-load-testing/open-shift/pod-kogito-gatling-benchmark.yaml
@@ -43,3 +43,18 @@ spec:
       volumeMounts:
        - name: shared-file-storage
          mountPath: /src/kogito-gatling/target
+    - name: persist-gatling-reports-to-mongodb
+        image: quay.io/almoglevi0/persist-gatling-reports-to-mongodb
+        envFrom:
+          - secretRef:
+              name: kogito-persist-gatling-results-to-mongo-crendentials
+        env:
+        - name: GATLING_FILE_PATH_ENV
+          value: /src/kogito-gatling/target/gatling
+        - name: MONGODB_NAME
+          value: kogito_dataindex
+        - name: MONGODB_COLLECTION_NAME
+          value: benchmark_results
+        volumeMounts:
+          - name: shared-file-storage
+            mountPath: /src/kogito-gatling/target
