Made following changes. 1) Added two separate maven profiles mongo and infinispan so that we can easily switch between the backend. Updated README.md file as well. 2) Added a listener class to log the active profile and some key configurations for troubleshooting. 3) Added docker-compose.yml to spin up infinispan and mongo db. 4) Added a custom stub rest API. In case if we wanted to test basic rest API to evaluate the performance difference between environment latency vs actual kogito application.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /stub-projects/stub-quarkus-rest-mongo/target/
 /stub-projects/gatling-test/target/
 /test/.idea/
+*/target/*
+/test/process-quarkus-example/target/*
+/test/process-quarkus-example/target/generated-sources/*
+/test/process-quarkus-example/target/classes/*
