--- a/test/process-quarkus-example/src/main/resources/application-default.properties
+++ b/test/process-quarkus-example/src/main/resources/application-default.properties
@@ -1,6 +1,7 @@
+# Packaging
+# quarkus.package.type=fast-jar
 
-############################ infinispan profile##################
-quarkus.profile=infinispan
+############################ GLOBAL CONFIG ##################
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.cors=true
@@ -21,8 +22,23 @@ mp.messaging.outgoing.kogito-variables-events.value.serializer=org.apache.kafka.
 
 # Maximum Java heap to be used during the native image generation
 quarkus.native.native-image-xmx=6g
-quarkus.log.level=INFO
+
+quarkus.log.level=DEBUG
+
+#quarkus.profile=mongo
+#kogito.persistence.type=mongodb
+#quarkus.mongodb.database=kogito_quarkus
+
+#quarkus.profile=mongo
+#kogito.persistence.type=mongodb
+#quarkus.mongodb.database=kogito_quarkus
+#quarkus.mongodb.connection-string = mongodb://localhost:27017/kogito_quarkus
+
+############################ MONGO profile##################
+#kogito.persistence.type=mongodb
+#quarkus.mongodb.database=kogito_quarkus
+#mongo.quarkus.mongodb.connection-string=mongodb://localhost:27017
 
 ############################ INFINISPAN Profile ##################
-quarkus.infinispan-client.server-list=localhost:11222
-quarkus.infinispan-client.use-auth=false
+#quarkus.infinispan-client.server-list=localhost:11222
+#quarkus.infinispan-client.use-auth=false
