--- a/test/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -1,6 +1,9 @@
 
-############################ infinispan profile##################
-quarkus.profile=infinispan
+############################ MONGO profile##################
+quarkus.profile=mongo
+kogito.persistence.type=mongodb
+quarkus.mongodb.database=kogito_quarkus
+quarkus.mongodb.connection-string = mongodb://localhost:27017/kogito_quarkus
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.cors=true
@@ -21,8 +24,5 @@ mp.messaging.outgoing.kogito-variables-events.value.serializer=org.apache.kafka.
 
 # Maximum Java heap to be used during the native image generation
 quarkus.native.native-image-xmx=6g
-quarkus.log.level=INFO
 
-############################ INFINISPAN Profile ##################
-quarkus.infinispan-client.server-list=localhost:11222
-quarkus.infinispan-client.use-auth=false
+quarkus.log.level=INFO
