readme format table builder for gatling results

--- a/test/kogito-gatling-load-testing/pom.xml
+++ b/test/kogito-gatling-load-testing/pom.xml
@@ -24,6 +24,13 @@
       <version>${gatling.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.clerezza.ext/org.json.simple -->
+    <dependency>
+      <groupId>org.apache.clerezza.ext</groupId>
+      <artifactId>org.json.simple</artifactId>
+      <version>0.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
