--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /test/kogito-gatling-load-testing/target/*
 *.idea
 *.iml
+/test/process-quarkus-example/nohup.out
+save_pid.txt
+process-quarkus-example.log
