Added Simple Process with just a HT (no sub-process)

--- a/test/kogito-benchmark-client/src/main/resources/application.properties
+++ b/test/kogito-benchmark-client/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #process-api/mp-rest/url=http://localhost:8080
+#process-api/mp-rest/url=http://appeng-vm02.cloud.lab.eng.bos.redhat.com:8080
 process-api/mp-rest/url=http://process-quarkus-example-fsi-kogito-benchmarking.apps.mw-ocp4.cloud.lab.eng.bos.redhat.com/
 process-api/mp-rest/scope=javax.inject.Singleton 
 quarkus.http.port=9090
