Instructions to manage indexes Commented optional process properties

--- a/test/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -1,6 +1,8 @@
 
 ############################ MONGO profile##################
 quarkus.profile=mongo
+#quarkus.vertx.worker-pool-size=100
+#quarkus.mongodb.max-pool-size=100
 kogito.persistence.type=mongodb
 quarkus.mongodb.database=kogito_quarkus
 quarkus.mongodb.connection-string = mongodb://localhost:27017/kogito_quarkus
