moved test folder and updated scripts so that it's also easier to test only benchmark without automation

--- a/test-apps/process-quarkus-example/pom.xml
+++ b/test-apps/process-quarkus-example/pom.xml
@@ -150,6 +150,25 @@
 
   <profiles>
     <profile>
+      <id>postgres</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <property>
+          <name>postgres</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>qquarkus-reactive-pg-client</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.kie.kogito</groupId>
+          <artifactId>kogito-addons-persistence-postgresql</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>mongo</id>
       <activation>
         <activeByDefault>false</activeByDefault>
