--- a/test-apps/quarkus-rest-mongo/pom.xml
+++ b/test-apps/quarkus-rest-mongo/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.acme</groupId>
-  <artifactId>mongodb-quickstart</artifactId>
+  <artifactId>quarkus-rest-mongo</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
