--- a/test-apps/quarkus-rest-mongo/src/main/resources/application.properties
+++ b/test-apps/quarkus-rest-mongo/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 #quarkus.mongodb.connection-string=mongodb://localhost:27017
 #oc port-forward kogito-mongodb-0 34000:27017
 quarkus.mongodb.connection-string=mongodb://developer:mypass@localhost:34000/?authSource=admin
+quarkus.http.port=8081
