--- a/test-apps/process-quarkus-example/src/main/resources/application-postgres.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-postgres.properties
@@ -1,14 +1,16 @@
-quarkus.swagger-ui.always-include=true
+############################ App performance ##################
 quarkus.vertx.worker-pool-size=100
 
-# Maximum Java heap to be used during the native image generation
-quarkus.native.native-image-xmx=8g
-
+############################ persistence ##################
+quarkus.profile=postgres
 kogito.persistence.type=postgresql
-
+kogito.persistence.auto.ddl=true
 quarkus.datasource.username=postgres
 quarkus.datasource.password=pass
 quarkus.datasource.reactive.url=postgresql://localhost:5432/kogito
 
-#run create tables scripts
-kogito.persistence.auto.ddl=true
+############################ misc ##################
+quarkus.swagger-ui.always-include=true
+# Maximum Java heap to be used during the native image generation
+quarkus.native.native-image-xmx=8g
+
