--- a/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -1,6 +1,7 @@
 ############################ App performance ##################
-quarkus.vertx.worker-pool-size=100
-quarkus.mongodb.max-pool-size=100
+quarkus.vertx.worker-pool-size=10
+quarkus.mongodb.max-pool-size=10
+quarkus.mongodb.min-pool-size=10
 
 ############################ persistence ##################
 quarkus.profile=mongo
