Build and share result with kogito-example 1.13 release

--- a/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -1,28 +1,30 @@
+quarkus.profile=mongo
 
 ############################ MONGO profile##################
-quarkus.profile=mongo
-quarkus.vertx.worker-pool-size=100
-quarkus.mongodb.max-pool-size=100
+quarkus.vertx.worker-pool-size=${WORKER_POOL_SIZE}
+quarkus.mongodb.min-pool-size=${MIN_POOL}
+quarkus.mongodb.max-pool-size=${MAX_POOL}
 kogito.persistence.type=mongodb
+
 quarkus.mongodb.database=kogito_quarkus
-quarkus.mongodb.connection-string = mongodb://localhost:27017/kogito_quarkus
+quarkus.mongodb.connection-string=${MONGODB_URL}
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.cors=true
 
-kafka.bootstrap.servers=localhost:9092
-
-mp.messaging.outgoing.kogito-processinstances-events.connector=smallrye-kafka
-mp.messaging.outgoing.kogito-processinstances-events.topic=kogito-processinstances-events
-mp.messaging.outgoing.kogito-processinstances-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-mp.messaging.outgoing.kogito-usertaskinstances-events.connector=smallrye-kafka
-mp.messaging.outgoing.kogito-usertaskinstances-events.topic=kogito-usertaskinstances-events
-mp.messaging.outgoing.kogito-usertaskinstances-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-
-mp.messaging.outgoing.kogito-variables-events.connector=smallrye-kafka
-mp.messaging.outgoing.kogito-variables-events.topic=kogito-variables-events
-mp.messaging.outgoing.kogito-variables-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+#kafka.bootstrap.servers=localhost:9092
+#
+#mp.messaging.outgoing.kogito-processinstances-events.connector=smallrye-kafka
+#mp.messaging.outgoing.kogito-processinstances-events.topic=kogito-processinstances-events
+#mp.messaging.outgoing.kogito-processinstances-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+#
+#mp.messaging.outgoing.kogito-usertaskinstances-events.connector=smallrye-kafka
+#mp.messaging.outgoing.kogito-usertaskinstances-events.topic=kogito-usertaskinstances-events
+#mp.messaging.outgoing.kogito-usertaskinstances-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+#
+#mp.messaging.outgoing.kogito-variables-events.connector=smallrye-kafka
+#mp.messaging.outgoing.kogito-variables-events.topic=kogito-variables-events
+#mp.messaging.outgoing.kogito-variables-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Maximum Java heap to be used during the native image generation
 quarkus.native.native-image-xmx=6g
