postgres pool setting

--- a/test-apps/process-quarkus-example/src/main/resources/application-postgres.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-postgres.properties
@@ -1,5 +1,6 @@
 ############################ App performance ##################
 quarkus.vertx.worker-pool-size=100
+quarkus.datasource.reactive.max-size=100
 
 ############################ persistence ##################
 quarkus.profile=postgres
