--- a/test-apps/process-quarkus-example/pom.xml
+++ b/test-apps/process-quarkus-example/pom.xml
@@ -172,6 +172,29 @@
       </dependencies>
     </profile>
     <profile>
+      <id>jdbc</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <property>
+          <name>jdbc</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.kie.kogito</groupId>
+          <artifactId>kogito-addons-persistence-jdbc</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-jdbc-postgresql</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-agroal</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
       <id>mongo</id>
       <activation>
         <activeByDefault>false</activeByDefault>
