Updated app to interact with Debezium

--- a/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -12,6 +12,12 @@ quarkus.mongodb.connection-string=${MONGODB_URL}
 quarkus.swagger-ui.always-include=true
 quarkus.http.cors=true
 
+kogito.persistence.transaction.enabled=true
+kogito.events.database=kogito
+kogito.events.processinstances.collection=kogitoprocessinstancesevents
+kogito.events.usertasks.collection=kogitousertaskinstancesevents
+kogito.events.variables.collection=kogitovariablesevents
+
 #kafka.bootstrap.servers=localhost:9092
 #
 #mp.messaging.outgoing.kogito-processinstances-events.connector=smallrye-kafka
