--- a/test-apps/process-quarkus-example/pom.xml
+++ b/test-apps/process-quarkus-example/pom.xml
@@ -64,6 +64,10 @@
     </dependency>
     <dependency>
       <groupId>org.kie.kogito</groupId>
+      <artifactId>kogito-addons-quarkus-events-mongodb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.kie.kogito</groupId>
       <artifactId>kogito-addons-quarkus-process-management</artifactId>
     </dependency>
     <dependency>
@@ -193,7 +197,7 @@
         </dependency>
         <dependency>
           <groupId>org.kie.kogito</groupId>
-          <artifactId>kogito-addons-persistence-mongodb</artifactId>
+          <artifactId>kogito-addons-quarkus-persistence-mongodb</artifactId>
         </dependency>
       </dependencies>
     </profile>
