Latest changes for Debezium

--- a/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -1,19 +1,19 @@
 quarkus.profile=mongo
 
 ############################ MONGO profile##################
-quarkus.vertx.worker-pool-size=${WORKER_POOL_SIZE}
-quarkus.mongodb.min-pool-size=${MIN_POOL}
-quarkus.mongodb.max-pool-size=${MAX_POOL}
+quarkus.vertx.worker-pool-size=${WORKER_POOL_SIZE:10}
+quarkus.mongodb.min-pool-size=${MIN_POOL:10}
+quarkus.mongodb.max-pool-size=${MAX_POOL:10}
 kogito.persistence.type=mongodb
 
-quarkus.mongodb.database=kogito_quarkus
-quarkus.mongodb.connection-string=${MONGODB_URL}
+quarkus.mongodb.database=kogito
+quarkus.mongodb.connection-string=${MONGODB_URL:mongodb://localhost:27017}
 
 quarkus.swagger-ui.always-include=true
 quarkus.http.cors=true
 
 kogito.persistence.transaction.enabled=true
-kogito.events.database=kogito
+kogito.events.database=kogito-events
 kogito.events.processinstances.collection=kogitoprocessinstancesevents
 kogito.events.usertasks.collection=kogitousertaskinstancesevents
 kogito.events.variables.collection=kogitovariablesevents
