--- a/test-clients/quarkus-client/src/main/resources/application.properties
+++ b/test-clients/quarkus-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-process-api/mp-rest/url=${URL}
+process-api/mp-rest/url=${URL:http://localhost:8080}
 process-api/mp-rest/scope=javax.inject.Singleton 
 quarkus.http.port=9090
 
 quarkus.log.level=INFO
 quarkus.log.category.com.redhat.level=DEBUG
-quarkus.vertx.worker-pool-size=${WORKER_POOL_SIZE}
+quarkus.vertx.worker-pool-size=${WORKER_POOL_SIZE:10}
