Updating results for Debezium

--- a/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
+++ b/test-apps/process-quarkus-example/src/main/resources/application-mongo.properties
@@ -1,14 +1,24 @@
-############################ App performance ##################
-quarkus.vertx.worker-pool-size=100
-quarkus.mongodb.max-pool-size=100
-
-############################ persistence ##################
 quarkus.profile=mongo
-kogito.persistence.type=mongodb
-quarkus.mongodb.database=kogito_quarkus
-quarkus.mongodb.connection-string = mongodb://localhost:27017/kogito_quarkus
 
-############################ misc ##################
+############################ MONGO profile##################
+quarkus.vertx.worker-pool-size=${WORKER_POOL_SIZE:10}
+quarkus.mongodb.min-pool-size=${MIN_POOL:10}
+quarkus.mongodb.max-pool-size=${MAX_POOL:10}
+kogito.persistence.type=mongodb
+
+quarkus.mongodb.database=kogito
+quarkus.mongodb.connection-string=${MONGODB_URL:mongodb://localhost:27017}
+
 quarkus.swagger-ui.always-include=true
+quarkus.http.cors=true
+
+kogito.persistence.transaction.enabled=true
+kogito.events.database=kogito-events
+kogito.events.processinstances.collection=kogitoprocessinstancesevents
+kogito.events.usertasks.collection=kogitousertaskinstancesevents
+kogito.events.variables.collection=kogitovariablesevents
+
 # Maximum Java heap to be used during the native image generation
 quarkus.native.native-image-xmx=6g
+
+quarkus.log.level=INFO
